# haskell-dojo

./: .gitattributes  .gitignore  dojo1_slides.tex  dojo2.1_slides.tex  dojo2.2_slides.tex  dojo2_ex2_main.hs  dojo2_ex2_main2.hs  hlint-ex.hs  roadmap.txt
cards/: Cards.hs  Main.hs  Test.hs
dojo2/io/: io.cabal  test.sh
dojo2/io/client/: Client.hs
dojo2/io/lib/: Types.hs
dojo2/io/server/: Server.hs  Util.hs
dojo2/json/: jsontest.cabal
dojo2/json/src/: Main.hs  Types.hs  YaJSON.hs
